Bug 189011. Mail compose broken. Partial backout of bug 176296, r=brade, sr=smfr